# filecheck_pkg

./: LICENSE  README.md  __init__.py  console.py  entrypoint.py  pyproject.toml  requirements.txt  setup.py
OutPutDir/: FilesIntegrityReport_2020-09-15_082648.txt  exampleOutPut.txt
argmanage/: __init__.py  checkentries.py  clickconsole.py
filecheck_pkg/: __init__.py  console.py  onelinecmd.py
filecheck_pkg/argmanage/: __init__.py  checkentries.py  clickconsole.py
filecheck_pkg/screenit/: __init__.py  headerfooter.py
poetpack_tmpl/: __init__.py  console.py
screenit/: __init__.py  headerfooter.py
