[tool.poetry]
name = "poetpack_tmpl"
version = "0.1.0"
description = "Poetry tempalte package"
authors = ["NajlaBH"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"


[tool.poetry.scripts]
poetpack_tmpl = "poetpack_tmpl.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

