[tool.poetry]
name = "filecheck_pkg"
version = "1.1.0"
description = "Python package for file integrity check"
authors = ["NajlaBH"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"


[tool.poetry.scripts]
filecheck_pkg = "filecheck_pkg.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

